force-app/main/default/objects/Account/fields/Callbook_Number__c.field-meta.xml
<CustomField>
    <fullName>Callbook_Number__c</fullName>
    <description>Callbook Legacy number</description>
    <inlineHelpText>Callbook Number from the callbook system</inlineHelpText>
    <label>Callbook Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>