force-app/main/default/objects/Account/fields/Campari__c.field-meta.xml
<CustomField>
    <fullName>Campari__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Campari the Distributor?</description>
    <label>Campari</label>
    <type>Checkbox</type>
</CustomField>