force-app/main/default/objects/Account/fields/Capacity_Czech__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Czech__c</fullName>
    <description>Czech segmentation</description>
    <inlineHelpText>Guest Capacity</inlineHelpText>
    <label>Capacity (Czech)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>up to 50</fullName>
            </value>
            <value>
                <fullName>bis 50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-150</fullName>
            </value>
            <value>
                <fullName>151-200</fullName>
            </value>
            <value>
                <fullName>201 - 400</fullName>
            </value>
            <value>
                <fullName>more than 400</fullName>
            </value>
            <value>
                <fullName>über 400</fullName>
            </value>
            <value>
                <fullName>51-150</fullName>
            </value>
            <value>
                <fullName>151-300</fullName>
            </value>
            <value>
                <fullName>300+</fullName>
            </value>
            <value>
                <fullName>Up to 150</fullName>
            </value>
            <value>
                <fullName>Over 150</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>