force-app/main/default/objects/Account/fields/Capacity_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Picklist__c</fullName>
    <label>Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 50</fullName>
            </value>
            <value>
                <fullName>50-99</fullName>
            </value>
            <value>
                <fullName>100-199</fullName>
            </value>
            <value>
                <fullName>200-499</fullName>
            </value>
            <value>
                <fullName>500 and more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>