force-app/main/default/objects/Account/fields/capacity_utilisation__c.field-meta.xml
<CustomField>
    <fullName>capacity_utilisation__c</fullName>
    <description>Germany-On-Trade: How full is this place?</description>
    <inlineHelpText>How full is this place?</inlineHelpText>
    <label>Capacity Utilisation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eher leer</fullName>
            </value>
            <value>
                <fullName>mittlere</fullName>
            </value>
            <value>
                <fullName>immer voll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>