force-app/main/default/objects/Account/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <description>Carrier - Used by Distributor dB</description>
    <label>Carrier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>