force-app/main/default/objects/Account/fields/Case_Marks__c.field-meta.xml
<CustomField>
    <fullName>Case_Marks__c</fullName>
    <description>Case Marks - Used for Distributor dB</description>
    <label>Case Marks</label>
    <type>TextArea</type>
</CustomField>