force-app/main/default/objects/Account/fields/Categories_Sold__c.field-meta.xml
<CustomField>
    <fullName>Categories_Sold__c</fullName>
    <label>Categories Sold</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Malt&amp;Scotch 12YO+</fullName>
            </value>
            <value>
                <fullName>Scotch Standard</fullName>
            </value>
            <value>
                <fullName>American Whiskey</fullName>
            </value>
            <value>
                <fullName>Irish Whisky</fullName>
            </value>
            <value>
                <fullName>Super Premium Vodka</fullName>
            </value>
            <value>
                <fullName>Imported Vodka</fullName>
            </value>
            <value>
                <fullName>Premium Vodka</fullName>
            </value>
            <value>
                <fullName>Mainstream Vodka</fullName>
            </value>
            <value>
                <fullName>Low-Proof</fullName>
            </value>
            <value>
                <fullName>RTD</fullName>
            </value>
            <value>
                <fullName>Cognac</fullName>
            </value>
            <value>
                <fullName>Rum</fullName>
            </value>
            <value>
                <fullName>Tequila</fullName>
            </value>
            <value>
                <fullName>Gin</fullName>
            </value>
            <value>
                <fullName>Imported Liquors</fullName>
            </value>
            <value>
                <fullName>Gift Packs</fullName>
            </value>
            <value>
                <fullName>Whiskey</fullName>
            </value>
            <value>
                <fullName>Liqueurs / Cordials / Brandy</fullName>
            </value>
            <value>
                <fullName>Vodka</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>