force-app/main/default/objects/Account/fields/Category_Mgmt_B_F_Resources__c.field-meta.xml
<CustomField>
    <fullName>Category_Mgmt_B_F_Resources__c</fullName>
    <label>Category Mgmt - B-F Resources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>