force-app/main/default/objects/Account/fields/Category_Mgmt_Comp__c.field-meta.xml
<CustomField>
    <fullName>Category_Mgmt_Comp__c</fullName>
    <label>Category Mgmt - Major Comp Resources</label>
    <type>TextArea</type>
</CustomField>