force-app/main/default/objects/Account/fields/Category_Mgmt_Validation__c.field-meta.xml
<CustomField>
    <fullName>Category_Mgmt_Validation__c</fullName>
    <label>Category Mgmt - Validation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>