force-app/main/default/objects/Account/fields/CEO__c.field-meta.xml
<CustomField>
    <fullName>CEO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FDC-PLFC</description>
    <inlineHelpText>Chief Executive Officer</inlineHelpText>
    <label>CEO</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (CEO)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>