force-app/main/default/objects/Account/fields/CEO_and_COB_split__c.field-meta.xml
<CustomField>
    <fullName>CEO_and_COB_split__c</fullName>
    <description>FDC-PLFC</description>
    <label>CEO and COB split?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>