force-app/main/default/objects/Account/fields/CEO_family_member__c.field-meta.xml
<CustomField>
    <fullName>CEO_family_member__c</fullName>
    <description>FDC-PLFC</description>
    <formula>IF( CEO__r.Is_Family__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <inlineHelpText>If the CEO is a member of the controlling family, this will display &quot;Yes&quot;</inlineHelpText>
    <label>CEO family member?</label>
    <type>Text</type>
</CustomField>