force-app/main/default/objects/Account/fields/CFO__c.field-meta.xml
<CustomField>
    <fullName>CFO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FDC-PLFC</description>
    <inlineHelpText>Chief Financial Officer</inlineHelpText>
    <label>CFO</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (CFO)</relationshipLabel>
    <relationshipName>AccountsCFO</relationshipName>
    <type>Lookup</type>
</CustomField>