force-app/main/default/objects/Account/fields/Chain__c.field-meta.xml
<CustomField>
    <fullName>Chain__c</fullName>
    <description>INFOWELDERS</description>
    <label>Chain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>4IN</fullName>
            </value>
            <value>
                <fullName>82 Ale House</fullName>
            </value>
            <value>
                <fullName>aloalo kitchen</fullName>
            </value>
            <value>
                <fullName>ALSUPER</fullName>
            </value>
            <value>
                <fullName>Anderson&#39;s</fullName>
            </value>
            <value>
                <fullName>Applebee&#39;s</fullName>
            </value>
            <value>
                <fullName>Aristocrat</fullName>
            </value>
            <value>
                <fullName>BAGUS</fullName>
            </value>
            <value>
                <fullName>Baton Rouge</fullName>
            </value>
            <value>
                <fullName>Bee</fullName>
            </value>
            <value>
                <fullName>BIP</fullName>
            </value>
            <value>
                <fullName>Boston Pizza</fullName>
            </value>
            <value>
                <fullName>Brewsters</fullName>
            </value>
            <value>
                <fullName>Buffalo Wild Wing</fullName>
            </value>
            <value>
                <fullName>Cactus Club</fullName>
            </value>
            <value>
                <fullName>Canadian Brewhouse</fullName>
            </value>
            <value>
                <fullName>Canyon Creek</fullName>
            </value>
            <value>
                <fullName>CASA LEY, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>Casey’s Bar and Grill</fullName>
            </value>
            <value>
                <fullName>C-CUBE</fullName>
            </value>
            <value>
                <fullName>CENTRAL DETALLISTA SA DE CV</fullName>
            </value>
            <value>
                <fullName>Chain</fullName>
            </value>
            <value>
                <fullName>Chili&#39;S</fullName>
            </value>
            <value>
                <fullName>CITY CLUB</fullName>
            </value>
            <value>
                <fullName>COMERCIAL CITY FRESKO S de RL de CV</fullName>
            </value>
            <value>
                <fullName>Companhia Brasileira de Distribuicao</fullName>
            </value>
            <value>
                <fullName>Concorde Group</fullName>
            </value>
            <value>
                <fullName>Co-Op</fullName>
            </value>
            <value>
                <fullName>Costco</fullName>
            </value>
            <value>
                <fullName>Crowfoot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>