force-app/main/default/objects/Account/fields/Chain_Italy__c.field-meta.xml
<CustomField>
    <fullName>Chain_Italy__c</fullName>
    <label>Chain (Italy)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>