force-app/main/default/objects/Account/fields/Chain_Subtype_PL__c.field-meta.xml
<CustomField>
    <fullName>Chain_Subtype_PL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chain Subtype</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Banner_Groups__c.Category_PL__c</field>
            <operation>equals</operation>
            <value>Subgroup</value>
        </filterItems>
        <filterItems>
            <field>$Source.Channel__c</field>
            <operation>equals</operation>
            <valueField>Banner_Groups__c.Channel_NP_PL__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Banner_Groups__c</referenceTo>
    <relationshipLabel>Chain Subtype</relationshipLabel>
    <relationshipName>Chain_Subtype</relationshipName>
    <type>Lookup</type>
</CustomField>