force-app/main/default/objects/Account/fields/Chain_Type_PL__c.field-meta.xml
<CustomField>
    <fullName>Chain_Type_PL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chain Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Banner_Groups__c.Market__r.Name</field>
            <operation>equals</operation>
            <value>Poland</value>
        </filterItems>
        <filterItems>
            <field>$Source.Channel__c</field>
            <operation>equals</operation>
            <valueField>Banner_Groups__c.Channel_NP_PL__c</valueField>
        </filterItems>
        <filterItems>
            <field>Banner_Groups__c.Category_PL__c</field>
            <operation>equals</operation>
            <value>Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Banner_Groups__c</referenceTo>
    <relationshipLabel>Chain Type</relationshipLabel>
    <relationshipName>Chain_Type</relationshipName>
    <type>Lookup</type>
</CustomField>