force-app/main/default/objects/Account/fields/Chambord_Category__c.field-meta.xml
<CustomField>
    <fullName>Chambord_Category__c</fullName>
    <label>Chambord Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lighthouse</fullName>
            </value>
            <value>
                <fullName>Aktivierungsoutlet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>