force-app/main/default/objects/Account/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>INFOWELDERS</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
            <value>
                <fullName>Non-Sellable</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Sub_Wholesaler</fullName>
            </value>
            <value>
                <fullName>INTEG MAINLY ON</fullName>
            </value>
            <value>
                <fullName>INTEG MAINLY OFF</fullName>
            </value>
            <value>
                <fullName>ON PREMISE</fullName>
            </value>
            <value>
                <fullName>OFF PREMISE</fullName>
            </value>
            <value>
                <fullName>INTEGRATED</fullName>
            </value>
            <value>
                <fullName>NON RETAIL</fullName>
            </value>
            <value>
                <fullName>UNCLASSIFIED</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Combera</fullName>
            </value>
            <value>
                <fullName>EVENTOS</fullName>
            </value>
            <value>
                <fullName>Off Modern</fullName>
            </value>
            <value>
                <fullName>Off Traditional</fullName>
            </value>
            <value>
                <fullName>Off DH</fullName>
            </value>
            <value>
                <fullName>LKA</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Delivery App</fullName>
            </value>
            <value>
                <fullName>e-Tailer</fullName>
            </value>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Club</fullName>
            </value>
            <value>
                <fullName>Mass</fullName>
            </value>
            <value>
                <fullName>Liquor Store</fullName>
            </value>
            <value>
                <fullName>Bricks and Clicks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>