force-app/main/default/objects/Account/fields/Channel_GTR__c.field-meta.xml
<CustomField>
    <fullName>Channel_GTR__c</fullName>
    <description>GTR needs Mult-Picklist for Channel</description>
    <label>Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Border</fullName>
            </value>
            <value>
                <fullName>In-Flight</fullName>
            </value>
            <value>
                <fullName>Ship Chandler</fullName>
            </value>
            <value>
                <fullName>Cruise / Ferry</fullName>
            </value>
            <value>
                <fullName>Cruise Gift Shop</fullName>
            </value>
            <value>
                <fullName>Diplomat</fullName>
            </value>
            <value>
                <fullName>Port Store</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>