force-app/main/default/objects/Account/fields/Channel_of_Distribution_TD__c.field-meta.xml
<CustomField>
    <fullName>Channel_of_Distribution_TD__c</fullName>
    <description>&quot;Channel of Distribution&quot; is an additional information to describe or select accounts in the german market - the information will be delivered by Nielsen /Trade Dimension monthly 
Note: it is not the same information like Channel [on/off/wholesaler,...]</description>
    <label>Channel of Distribution</label>
    <length>63</length>
    <type>Text</type>
</CustomField>