force-app/main/default/objects/Account/fields/Checkout__c.field-meta.xml
<CustomField>
    <fullName>Checkout__c</fullName>
    <description>Number of Checkout/ Register</description>
    <inlineHelpText>Please type in the number of checkouts in the store/outlet!</inlineHelpText>
    <label>Checkout</label>
    <length>3</length>
    <type>Text</type>
</CustomField>