force-app/main/default/objects/Account/fields/CIF_Account_Group__c.field-meta.xml
<CustomField>
    <fullName>CIF_Account_Group__c</fullName>
    <label>Account Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>