force-app/main/default/objects/Account/fields/CIF_Check_Digit__c.field-meta.xml
<CustomField>
    <fullName>CIF_Check_Digit__c</fullName>
    <description>CIF Check Digit</description>
    <label>Check Digit</label>
    <length>1</length>
    <type>Text</type>
</CustomField>