force-app/main/default/objects/Account/fields/CIF_copy_Sold_To_Address__c.field-meta.xml
<CustomField>
    <fullName>CIF_copy_Sold_To_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Sold To Address</label>
    <type>Checkbox</type>
</CustomField>