force-app/main/default/objects/Account/fields/CIF_Copy_Sold_To_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>CIF_Copy_Sold_To_Business_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Sold To Business Name</label>
    <type>Checkbox</type>
</CustomField>