force-app/main/default/objects/Account/fields/CIF_Customer_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>CIF_Customer_Hierarchy__c</fullName>
    <description>CIF_Customer_Hierarchy</description>
    <label>Customer Hierarchy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>