force-app/main/default/objects/Account/fields/CIF_Czech_FET_Liab_Filter_Returns__c.field-meta.xml
<CustomField>
    <fullName>CIF_Czech_FET_Liab_Filter_Returns__c</fullName>
    <label>Czech Republic FET Liab Filter Returns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - Not Relevant</fullName>
            </value>
            <value>
                <fullName>1 - US FET Taxable</fullName>
            </value>
            <value>
                <fullName>2- US FET Exempt</fullName>
            </value>
            <value>
                <fullName>3 - Non-US FET Exempt</fullName>
            </value>
            <value>
                <fullName>4 - Non-US FET Taxable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>