force-app/main/default/objects/Account/fields/CIF_Czech_FET_Liab_Filter_Sales__c.field-meta.xml
<CustomField>
    <fullName>CIF_Czech_FET_Liab_Filter_Sales__c</fullName>
    <label>Czech Republic FET Liab Filter Sales</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N  -  Not Relevant for FET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>