force-app/main/default/objects/Account/fields/CIF_Depletion_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CIF_Depletion_Indicator__c</fullName>
    <label>Depletion Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On/Before Ship Date - 5</fullName>
            </value>
            <value>
                <fullName>Manual Entry Depls - M</fullName>
            </value>
            <value>
                <fullName>Historical Data - H</fullName>
            </value>
            <value>
                <fullName>BDN Reported Depls - B</fullName>
            </value>
            <value>
                <fullName>N/A for Depletions</fullName>
            </value>
            <value>
                <fullName>Shipper (Depls=Ship) - S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>