force-app/main/default/objects/Account/fields/CIF_Eco_Contribution_Relevant__c.field-meta.xml
<CustomField>
    <fullName>CIF_Eco_Contribution_Relevant__c</fullName>
    <label>Eco Contribution Relevant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>