force-app/main/default/objects/Account/fields/CIF_Germany_Output_Tax__c.field-meta.xml
<CustomField>
    <fullName>CIF_Germany_Output_Tax__c</fullName>
    <label>Germany Output Tax</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - Not Relevant</fullName>
            </value>
            <value>
                <fullName>1 - Excise Whse (Taxable)</fullName>
            </value>
            <value>
                <fullName>2 - Customs Bond (Exempt)</fullName>
            </value>
            <value>
                <fullName>3 - Export (Exempt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>