force-app/main/default/objects/Account/fields/CIF_Incoterms_Addt_l__c.field-meta.xml
<CustomField>
    <fullName>CIF_Incoterms_Addt_l__c</fullName>
    <label>Incoterms (Addt&#39;l)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>