force-app/main/default/objects/Account/fields/CIF_Location_no_1__c.field-meta.xml
<CustomField>
    <fullName>CIF_Location_no_1__c</fullName>
    <description>CIF Fields</description>
    <label>Location no. 1</label>
    <length>7</length>
    <type>Text</type>
</CustomField>