force-app/main/default/objects/Account/fields/CIF_Location_no_2__c.field-meta.xml
<CustomField>
    <fullName>CIF_Location_no_2__c</fullName>
    <description>CIF - Location no. 2</description>
    <label>Location no. 2</label>
    <length>5</length>
    <type>Text</type>
</CustomField>