force-app/main/default/objects/Account/fields/CIF_Price_Determination__c.field-meta.xml
<CustomField>
    <fullName>CIF_Price_Determination__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Price Determination</label>
    <type>Checkbox</type>
</CustomField>