force-app/main/default/objects/Account/fields/CIF_Rebates__c.field-meta.xml
<CustomField>
    <fullName>CIF_Rebates__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Rebates</label>
    <type>Checkbox</type>
</CustomField>