force-app/main/default/objects/Account/fields/CIF_Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>CIF_Sales_Office__c</fullName>
    <label>Sales Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BFS1 - Domestic</fullName>
            </value>
            <value>
                <fullName>BFS2 - International</fullName>
            </value>
            <value>
                <fullName>FVW - BF Finland</fullName>
            </value>
            <value>
                <fullName>FR01 - BF France</fullName>
            </value>
            <value>
                <fullName>TR01 - BF Turkey</fullName>
            </value>
            <value>
                <fullName>BFS3</fullName>
            </value>
            <value>
                <fullName>KOR-Korea Seoul Office</fullName>
            </value>
            <value>
                <fullName>ES01 - BF Spain</fullName>
            </value>
            <value>
                <fullName>RU01 - BF Russia</fullName>
            </value>
            <value>
                <fullName>GB02 - BenRiach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>