force-app/main/default/objects/Account/fields/CIF_Search_Term__c.field-meta.xml
<CustomField>
    <fullName>CIF_Search_Term__c</fullName>
    <label>Search Term</label>
    <type>TextArea</type>
</CustomField>