force-app/main/default/objects/Account/fields/CIF_Shipping_Conditions__c.field-meta.xml
<CustomField>
    <fullName>CIF_Shipping_Conditions__c</fullName>
    <label>Shipping Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10 - Freight Prepaid</fullName>
            </value>
            <value>
                <fullName>11 - Freight Collect</fullName>
            </value>
            <value>
                <fullName>12 - Prepaid No Autofrt</fullName>
            </value>
            <value>
                <fullName>90 - No Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>